--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "framer-motion": "11.15.0",
     "recharts": "2.12.7",
     "lucide-react": "0.468.0",
     "clsx": "2.1.1",
